# Robot5A

./: .flake8  .gitignore  Doxyfile  README.md
.github/workflows/: code_quality.yml  quality_code.yml
3D/: README.md
install/: local_setup.sh  setup.sh
install/robot_control/lib/robot_control/: moveit_node
install/robot_control/share/ament_index/resource_index/package_run_dependencies/: robot_control
install/robot_control/share/robot_control/: local_setup.sh  package.sh
install/robot_description/share/robot_description/: package.sh
install/robot_description/share/robot_description/config/: controller.yaml
install/robot_description/share/robot_description/launch/: gazebo.launch.py
install/robot_description/share/robot_description/meshes/: R5A_link3.STL  base_link.STL
install/robot_description/share/robot_description/urdf/: robot.urdf.xacro
install/robot_moveit_config/share/robot_moveit_config/: .setup_assistant  package.sh
install/robot_moveit_config/share/robot_moveit_config/config/: armr5.ros2_control.xacro  armr5.urdf.xacro  joint_limits.yaml
install/robot_moveit_config/share/robot_moveit_config/launch/: demo.launch.py  moveit_gazebo.launch.py  spawn_controllers.launch.py
log/: latest_build
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: aruco_to_link.yaml  camera_calibration.yaml  transform.yaml
src/robot_control/launch/: gazebo_gui.launch.py  moveit_control.launch.py  moveit_control2.launch.py  moveit_control_gui.launch.py  visual_sim.launch.py
src/robot_control/src/: aruco_detector_double.cpp  aruco_detector_single.cpp  aruco_rotation_publisher.cpp  cam_calibration.cpp  end_pose_node.cpp  moveit_control.cpp  moveit_control2.cpp  moveit_control_gui.cpp  moveit_control_simple.cpp  moveit_node.cpp  object_detector.cpp  visual_joint_state_publisher.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: aruco_planes.rviz  controller.yaml  controllers.yaml
src/robot_description/launch/: display.launch.py  gazebo.launch.py  gazebo2.launch.py  gazebo_move.launch.py
src/robot_description/media/materials/scripts/: aruco0_plane.material  aruco_plane.material
src/robot_description/meshes/: R5A_GripperLeft_Link1.STL  R5A_GripperLeft_Link2.STL  R5A_GripperLeft_Link3.STL  R5A_GripperLeft_Link31.STL  R5A_GripperRight_Link1.STL  R5A_GripperRight_Link2.STL  R5A_GripperRight_Link3.STL  R5A_GripperRight_Link31.STL  R5A_link3.STL
src/robot_description/models/armr5/: model.config  model.sdf
src/robot_description/models/aruco_block_long/: model.config
src/robot_description/models/checkerboard/: checkerboard_plane.sdf
src/robot_description/urdf/: aruco.urdf.xacro  gazebo_control.xacro  r5a_v_ros.urdf.xacro  r5a_v_ros_v3.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/robot_description/worlds/: aruco_detection.world  spotlight.world
src/robot_moveit_config/: .setup_assistant  package.xml
src/robot_moveit_config/config/: armr5.ros2_control.xacro  armr5.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_test/: CMakeLists.txt  package.xml
src/robot_test/data_analysis/: requirements.txt
src/robot_test/data_analysis/logs/Test_2024-11-20_09-38-00/: detected_markers.csv  test_information.txt
src/robot_test/data_analysis/logs/Test_2024-11-20_11-09-25/: aruco_pose_errors.csv  detected_markers.csv  test_information.txt
src/robot_test/data_analysis/logs/Test_2024-11-20_15-08-52/: aruco_pose_errors.csv  detected_markers.csv  test_information.txt
src/robot_test/data_analysis/logs/Test_2024-11-21_10-06-26/: aruco_pose_errors.csv  detected_markers.csv
src/robot_test/data_analysis/logs/Test_2024-12-04_13-56-25/: detected_markers.csv  test_information.txt
src/robot_test/data_analysis/logs/Test_2024-12-04_13-58-04/: detected_markers.csv  test_information.txt
src/robot_test/data_analysis/logs/Test_2024-12-04_14-38-04/: aruco_pose_errors.csv  detected_markers.csv
src/robot_test/data_analysis/logs/Test_2024-12-04_14-40-07/: aruco_pose_errors.csv  detected_markers.csv
src/robot_test/data_analysis/logs/Test_2024-12-04_14-46-47/: detected_markers.csv
src/robot_test/data_analysis/logs/Test_2024-12-04_14-48-39/: detected_markers.csv
src/robot_test/data_analysis/logs/Test_2024-12-04_15-02-19/: aruco_pose_errors.csv  detected_markers.csv  test_information.txt
src/robot_test/data_analysis/logs/Test_2024-12-04_15-03-56/: aruco_pose_errors.csv  detected_markers.csv  test_information.txt
src/robot_test/data_analysis/logs/Test_2024-12-05_10-29-44/: aruco_pose_errors.csv  detected_markers.csv  test_information.txt
src/robot_test/data_analysis/scripts/: generate_report.py
src/robot_test/launch/: standard_joint_test.launch.py  visual_sim.launch.py
src/robot_test/src/: aruco_error_logger.cpp  standard_joint_test.cpp
