<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eliott@todo.todo">eliott</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>control_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
