<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eliott@todo.todo">eliott</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>control_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>

  <!-- OpenCV dependency -->
  <depend>opencv</depend>

  <!-- Qt5 dependency -->
  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>libqt5widgets5</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
